--- a/src/app/modules/jukebox/components/chat-tab/chat-tab.component.scss
+++ b/src/app/modules/jukebox/components/chat-tab/chat-tab.component.scss
@@ -23,6 +23,7 @@
 .message-list {
     flex-grow: 1;
     overflow: auto;
+    height: 80%;
 }
 
 .chat-space {
